--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "type": "commonjs",
   "dependencies": {
     "axios": "^1.12.2",
-    "body-parser": "^1.20.2",
-    "express": "^4.18.2",
+    "body-parser": "^1.20.3",
+    "express": "^4.21.2",
+    "form-data": "^4.0.4",
     "googleapis": "^161.0.0",
-    "groq-sdk": "^0.33.0"
+    "groq-sdk": "^0.33.0",
+    "string-similarity": "^4.0.4"
   }
 }
