--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "form-data": "^4.0.4",
     "googleapis": "^161.0.0",
     "groq-sdk": "^0.33.0",
+    "micro": "^10.0.1",
     "string-similarity": "^4.0.4"
   }
 }
