--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.12.2",
     "body-parser": "^1.20.3",
+    "dotenv": "^17.2.3",
     "express": "^4.21.2",
     "form-data": "^4.0.4",
     "googleapis": "^161.0.0",
