--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "form-data": "^4.0.4",
     "googleapis": "^161.0.0",
     "groq-sdk": "^0.33.0",
+    "node-fetch": "^3.3.2",
     "string-similarity": "^4.0.4"
   }
 }
