--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
   "version": 2,
   "builds": [
+    { "src": "index.js", "use": "@vercel/node" },
     { "src": "sendWhatsApp.js", "use": "@vercel/node" },
     { "src": "bookings.js", "use": "@vercel/node" },
     { "src": "*.html", "use": "@vercel/static" },
@@ -10,9 +11,10 @@
   "routes": [
     { "src": "/sendWhatsApp", "dest": "/sendWhatsApp.js" },
     { "src": "/bookings", "dest": "/bookings.js" },
+    { "src": "/api/bookings", "dest": "/bookings.js" },
     { "src": "/img/(.*)", "dest": "/img/$1" },
     { "src": "/(.*\\.css)", "dest": "/$1" },
     { "src": "/(.*\\.html)", "dest": "/$1" },
-    { "src": "/(.*)", "dest": "/index.html" }
+    { "src": "/(.*)", "dest": "/index.js" }
   ]
 }
