--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,7 @@
   ],
   "routes": [
     { "src": "/sendWhatsApp", "dest": "index.js" },
+    { "src": "/api/bookings", "dest": "index.js" },
     { "src": "/img/(.*)", "dest": "/img/$1" },
     { "src": "/(.*\\.css)", "dest": "/$1" },
     { "src": "/(.*\\.html)", "dest": "/$1" },
