--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,13 @@
   ],
   "routes": [
     { "src": "/sendWhatsApp", "dest": "index.js" },
-    { "src": "/keepalive", "dest": "keepalive.js" },
+
+    {
+      "src": "/keepalive",
+      "methods": ["POST"],
+      "dest": "keepalive.js"
+    },
+
     { "src": "/img/(.*)", "dest": "/img/$1" },
     { "src": "/(.*\\.css)", "dest": "/$1" },
     { "src": "/(.*\\.html)", "dest": "/$1" },
