--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,20 @@
   "version": 2,
   "builds": [
     { "src": "index.js", "use": "@vercel/node" },
+    { "src": "api/*.js", "use": "@vercel/node" },
     { "src": "*.html", "use": "@vercel/static" },
     { "src": "*.css", "use": "@vercel/static" },
     { "src": "img/**", "use": "@vercel/static" }
   ],
+
   "routes": [
+    { "src": "/api/(.*)", "dest": "/api/$1.js" },
+
     { "src": "/sendWhatsApp", "dest": "index.js" },
     { "src": "/img/(.*)", "dest": "/img/$1" },
     { "src": "/(.*\\.css)", "dest": "/$1" },
     { "src": "/(.*\\.html)", "dest": "/$1" },
+
     { "src": "/(.*)", "dest": "index.js" }
   ]
 }
